# new_a-maze-ing

./: .gitignore  Makefile  a_maze_ing.py  ascii_renderer.py  config.txt  config_parser.py  maze.txt  mazegen-1.0.0-py3-none-any.whl  mlx-2.2-py3-none-any.whl  mlx_renderer.py  output_writer.py  parser.py  pyproject-mazegen.toml  pyproject.toml
mazegen/: __init__.py  generator.py  pattern_42.py  solver.py
